--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <div class="freeze" id="frz"></div>
     <div class="rules" id="rls">
-        <div class="close" ><button id="cls" onclick="change()">X</button></div>
+        <div class="clse" ><button id="cls" onclick="change()">X</button></div>
        <p><h2>Hand cricket is a simple game that can be played by two people. Here are the rules:</h2></p>
             <li>Overs: Choose how many Overs you want to play - 5 Overs/10 Overs/15 Overs.</li>
             <li>Total no of Wickets: You will get 7 wickets for this game.</li>
